Use layouts and includes.

--- a/blog.html
+++ b/blog.html
@@ -1,8 +1,9 @@
 ---
 layout: master
-title: Blog posts
+title: blog posts
 ---
 
+  {% include smallheader.html %}
   <ul>
   {% for post in site.posts %}
     <li>
