--- a/index.html
+++ b/index.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A live online video classroom enabling rich interaction and discussion.">
-    <meta name="author" content="oneroom">
-    <title>OneRoom</title>
-    <link href='http://fonts.googleapis.com/css?family=Merriweather+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,800,300' rel='stylesheet' type='text/css'>
-    <link href="css/oneroom.css" rel="stylesheet">
-    <link href="img/favicon.ico" rel="shortcut icon"/>
-  </head>
+---
+layout: master
+title: splash
+---
+
   <body>
     <header>
       <div class="bt bw3 b--green center mw9 phm phl-ns pbxl bg-cv" style="background-image:url(img/header.jpg);background-position: center top;">
@@ -178,27 +170,3 @@
         </div>
       </section>
     </main>
-    <footer class="b--light-gray bb b--blue bw4 pbl ptm" style="border-top: 1px solid #eee;">
-      <div class="center mw7 phm phl-ns pvl fw4 tc">
-        <p class="db dib-ns mrs fw1"> Copyright 2014 OneRoom </p>
-        <a class="link phs" href="/">Home</a>
-        <a class="link phs" href="https://angel.co/oneroom/jobs">Jobs</a>
-        <a class="link phs" href="mailto:scott@joinoneroom.com">Contact</a>
-      </div>
-    </footer>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-ga('create', 'UA-52598726-1', 'auto');
-ga('require', 'displayfeatures');
-ga('send', 'pageview');
-
-</script>
-
-</body>
-
-</html>
