Fix link to single jobs page.

--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@ title: splash
           <header class="fl wi-100">
             <h1 class="fl wi-100 f2 fw7 tc ttu mbx">We’re Hiring</h1>
             <p class="lh-copy serif fw1 f3">
-              Driven by the vision of a better way to learn online, 
-              we're building a dramatically new kind of online classroom,  
+              We're building a dramatically new kind of online classroom,  
               focused on live discussion. 
             </p>
             <p class="lh-copy serif fw1 mbx">
@@ -111,24 +110,13 @@ title: splash
           </header>
         </div>
         <div class="center mw6 cf">
-          <article class="fl tc wi-50">
+          <article class="fl tc wi-100">
             <div class="mw4 mw-12-ns center">
               <img src="img/question.png" class="box br-circ ba bw4 b--near-white">
             </div>
             <h1 class="mbn blue">You?</h1>
-            <p class="mtn dark-blue">Front-end Engineer</p>
           <div class="tc mtl">
-            <a class="btn btn--blue pam br4 smallest" href="https://angel.co/oneroom/jobs/40542-front-end-engineer">Apply now</a>
-          </div>
-          </article>
-          <article class="fl tc wi-50">
-            <div class="mw4 mw-12-ns center">
-              <img src="img/question.png" class="box br-circ ba bw4 b--near-white">
-            </div>
-            <h1 class="mbn blue tc">You?</h1>
-            <p class="mtn dark-blue tc">Full-stack Engineer </p>
-          <div class="tc mtl">
-            <a class="btn btn--blue pam br4 smallest" href="https://angel.co/oneroom/jobs/40539-full-stack-engineer">Apply now</a>
+            <a class="btn btn--blue pam br4 smallest" href="https://angel.co/oneroom/jobs/">Apply now</a>
           </div>
           </article>
         </div>
@@ -150,22 +138,29 @@ title: splash
             <div class="phl">
               <img src="img/scott.png" class="box br-circ ba bw3 bw4-ns b--near-white db">
             </div>
-            <h1 class="mbn f3">Scott Forman </h1>
-            <p class="mvn dark-blue fw1">Co-founder </p>
+            <h1 class="mbn f3">Scott Forman</h1>
+            <p class="mvn dark-blue fw1">Co-founder</p>
           </article>
+          <!--<article class="fl tc wi-50 wi-25-ns blue mbl">-->
+            <!--<div class="phl">-->
+              <!--<img src="img/kristina.jpg" class="box br-circ ba bw3 bw4-ns b--near-white db">-->
+            <!--</div>-->
+            <!--<h1 class="mbn f3">Kristina Garfinkel</h1>-->
+            <!--<p class="mvn dark-blue fw1">Software Engineer</p>-->
+          <!--</article>-->
           <article class="fl tc wi-50 wi-25-ns mbs blue mbl">
             <div class="phl">
               <img src="img/samantha.jpg" class="box br-circ ba bw3 bw4-ns b--near-white db">
             </div>
-            <h1 class="mbn f4 f3-ns">Samantha Warren </h1>
-            <p class="mvn dark-blue fw1">Design Lead </p>
+            <h1 class="mbn f4 f3-ns">Samantha Warren</h1>
+            <p class="mvn dark-blue fw1">Design Lead</p>
           </article>
           <article class="fl tc wi-50 wi-25-ns mbs blue mbl">
             <div class="phl">
               <img src="img/joe.png" class="box br-circ ba bw3 bw4-ns b--near-white db">
             </div>
-            <h1 class="mbn f4 f3-ns">Joe Greenstein </h1>
-            <p class="mvn dark-blue fw1">Advisor </p>
+            <h1 class="mbn f4 f3-ns">Joe Greenstein</h1>
+            <p class="mvn dark-blue fw1">Advisor</p>
           </article>
         </div>
       </section>
