Add Kristina to team and remove lame testimonial.

--- a/index.html
+++ b/index.html
@@ -31,24 +31,9 @@ title: splash
           </div>
         </div>
       </div>
-      <div>
-        <h1 class="mega-ns mbm fw7 white mtn">OneRoom</h1>
-        <h2 class="mvn fw1 f4 f3-ns serif mtn white">Online learning with a human touch.</h2>
-      </div>
     </header>
     <main class="pbx-ns">
       <section>
-        <header class="center mw8 tc">
-          <h1 class="ttu fw7 f1 mega-ns mbs mtn dn">Our Product</h1>
-            <p class="fw1 f4 mtn">
-              Here’s what one of our first <br class="dn-ns">teachers had to say:
-            </p>
-            <blockquote class="mln wi-100 phl box">
-              <p class="serif f3 f1-ns fw4 i dark-blue lh-copy">
-                “This is making me want to teach online...I’m convinced that one can actually create a usable learning environment with the right technology.”
-              </p>
-            </blockquote>
-        </header>
         <div class="center mw8 phm phl-ns">
           <div class="cf bt b--lightest-gray ptx mtx">
             <div class="pbl tc fl wi-100 wi-50-ns ">
@@ -121,12 +106,7 @@ title: splash
           </article>
         </div>
         <div class="center mw8 phl phn-ns cf bt b--light-gray ptm mtx">
-          <h1 class="fl wi-100 b tc ttu f1-ns mbs mtx">The Team</h1>
-          <div class="fl wi-100 pvl">
-            <p class="tl-ns serif fw1 mbl lh-copy mw6 center f4  mid-gray">
-              Jeff and Scott were the 1st and 3rd employees of Opower, where they worked together 
-              building software that has so far saved more than 6 terawatt-hours of energy.</p>
-          </div>
+          <h1 class="fl wi-100 b tc ttu f1-ns mbs mtx pvl">The Team</h1>
           <article class="fl tc wi-50 wi-25-ns blue mbl">
             <div class="phl">
               <img src="img/jeff.png" class="box br-circ ba bw3 bw4-ns b--near-white db" >
@@ -141,13 +121,13 @@ title: splash
             <h1 class="mbn f3">Scott Forman</h1>
             <p class="mvn dark-blue fw1">Co-founder</p>
           </article>
-          <!--<article class="fl tc wi-50 wi-25-ns blue mbl">-->
-            <!--<div class="phl">-->
-              <!--<img src="img/kristina.jpg" class="box br-circ ba bw3 bw4-ns b--near-white db">-->
-            <!--</div>-->
-            <!--<h1 class="mbn f3">Kristina Garfinkel</h1>-->
-            <!--<p class="mvn dark-blue fw1">Software Engineer</p>-->
-          <!--</article>-->
+          <article class="fl tc wi-50 wi-25-ns blue mbl">
+            <div class="phl">
+              <img src="img/kristina.jpg" class="box br-circ ba bw3 bw4-ns b--near-white db">
+            </div>
+            <h1 class="mbn f3">Kristina Garfinkel</h1>
+            <p class="mvn dark-blue fw1">Software Engineer</p>
+          </article>
           <article class="fl tc wi-50 wi-25-ns mbs blue mbl">
             <div class="phl">
               <img src="img/samantha.jpg" class="box br-circ ba bw3 bw4-ns b--near-white db">
