Add navbar and skeletons for new pages.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: master
-title: splash
+title: home 
 ---
 
   <body>
@@ -11,70 +11,90 @@ title: splash
             <a href="/" class="fade" title="home"><img src="img/logo.svg"></a>
           </div>
         </div>
-        <h2 class="mtn f2 mega-ns fw7 white tc ptl ptx-ns mtl">ONLINE LEARNING,<br> WITH A HUMAN TOUCH.</h2>
+        <h2 class="mtn f2 mega-ns fw7 white tc ptl ptx-ns mtl">ONLINE LEARNING, HUMANIZED</h2>
         <hr style="height:0;padding-bottom:1px;background:rgba(0,0,0,.1);border:0;" class="mw7 mvl">
 
         <div class="cf">
-          <div class="fl-ns wi-50-ns prs-ns">
-            <div class="mw5 mw6-ns tc center ">
-              <img src="img/mac-transparent-bg.png" class="dib">
-            </div>
+          <div class="mw5 mw6-ns tc center ">
+            <img src="img/mac-transparent-bg.png" class="dib">
           </div>
-          <div class="wi-50-ns fl-ns">
-            <p class="center serif fw1 f3 f2-m f1-l lh-title white mw6 mw9-ns phl phn-ns tc tl-ns ptn ptl-ns">
-              We’re inviting a select group of<br class="dn db-ns">
-              educators to join our private alpha.
-            </p>
-            <div class="tc tl-ns mtl">
-              <a href="/apply.html" class="br3 ba b--white bw1 phm pvm small white dim">Sign up to teach</a>
-            </div>
-          </div>
+        </div>
+        <div class="tc center mtl">
+          <a href="/apply.html" class="center br3 ba b--white bw1 phm pvm small white dim">Sign up to teach</a>
         </div>
       </div>
     </header>
     <main class="pbx-ns">
-      <section>
+      <section id="valueprop">
         <div class="center mw8 phm phl-ns">
           <div class="cf bt b--lightest-gray ptx mtx">
-            <div class="pbl tc fl wi-100 wi-50-ns ">
-              <div class="mw5 center">
+
+            <div class="fl">
+              <div class="pbl fl tc wi-100 wi-50-ns ">
+                <div class="mw5 center">
                   <img src="img/mac-left.png" class="dn">
                   <img src="img/imac.png">
                 </div>
-            </div>
-          <div class="fl wi-100 wi-50-ns">
-            <h1 class="wi-100 tc tl-ns fw1 mtm mtn-ns"><b>We’d love to have you join</h1>
-              <p class="fw1 tc tl-ns serif ">Specifically if you teach or help others write:</p>
-            <div class="cf center mw6">
-              <div class="fl wi-100 wi-50-ns">
-                <ul class="tc tl-ns mvn plm list-mobile">
-                  <li> Short stories</li>
-                  <li> Novels</li>
-                  <li> Creative non-fiction</li>
-                  <li> Memoir</li>
-                  <li> Poetry</li>
-                  <li> Journalism</li>
-                </ul>
               </div>
+
               <div class="fl wi-100 wi-50-ns">
-                <ul class="tc tl-ns mvn plm list-mobile">
-                  <li> Proposals</li>
-                  <li> Grants</li>
-                  <li> Academic writing</li>
-                  <li> Blogs</li>
-                  <li> Screenwriting</li>
-                </ul>
+                <h1 class="wi-100 tc tl-ns fw1 mtm mtn-ns"><b>Reach students anywhere, any time.</h1>
+                  <p class="fw1 tc tl-ns serif">You can be anywhere, as long as you have a high-speed internet connection, a recent-model computer with a webcam, and a quiet place to be. Pants optional.</p>
+                </div>
+              </div>
+
+            <div class="fl">
+              <div class="pbl tc fl wi-100 wi-50-ns ">
+                <div class="mw5 center">
+                  <img src="img/mac-left.png" class="dn">
+                  <img src="img/imac.png">
+                </div>
+              </div>
+
+              <div class="fl wi-100 wi-50-ns">
+                <h1 class="wi-100 tc tl-ns fw1 mtm mtn-ns"><b>Foster real human connections.</h1>
+                  <p class="fw1 tc tl-ns serif">How well do you remember someone when you exchange comments on a message board?</p>
+                </div>
+              </div>
+
+            <div class="fl">
+              <div class="pbl tc fl wi-100 wi-50-ns ">
+                <div class="mw5 center">
+                  <img src="img/mac-left.png" class="dn">
+                  <img src="img/imac.png">
+                </div>
+              </div>
+
+              <div class="fl wi-100 wi-50-ns">
+                <h1 class="wi-100 tc tl-ns fw1 mtm mtn-ns"><b>We account for the nuances of teaching.</h1>
+                <p class="fw1 tc tl-ns serif">Specifically if you teach or help others write:</p>
               </div>
             </div>
-          </div>
+
+            <div class="fl">
+              <div class="pbl tc fl wi-100 wi-50-ns ">
+                <div class="mw5 center">
+                  <img src="img/mac-left.png" class="dn">
+                  <img src="img/imac.png">
+                </div>
+              </div>
+
+              <div class="fl wi-100 wi-50-ns">
+                <h1 class="wi-100 tc tl-ns fw1 mtm mtn-ns"><b>Reach students anywhere, any time.</h1>
+                  <p class="fw1 tc tl-ns serif">Specifically if you teach or help others write:</p>
+                </div>
+              </div>
+
         </div>
-        <div class="br3 mtx bg-aqua-light pal">
-          <p class="f4 f3-ns tc fw1 lh-copy mbn">We have <strike>10</strike> <b>3</b> slots still open for teachers in our private alpha.</p>
-          <div class="tc pvl">
-            <a class="btn btn--blue pam br4 f5" href="/apply.html">Sign up to teach</a>
-          </div>
-        </div>
-      </section>
+      </div>
+        <!--<div class="br3 mtx bg-aqua-light pal">-->
+          <!--<p class="f4 f3-ns tc fw1 lh-copy mbn">We have <strike>10</strike> <b>3</b> slots still open for teachers in our private alpha.</p>-->
+          <!--<div class="tc pvl">-->
+            <!--<a class="btn btn--blue pam br4 f5" href="/apply.html">Sign up to teach</a>-->
+          <!--</div>-->
+        <!--</div>-->
+      </section> <!-- end value-prop section--!>
+
       <section class="bt b--lightest-gray mtx pvx">
         <div class="center mw7 phm phl-ns cf">
           <header class="fl wi-100">
@@ -103,44 +123,6 @@ title: splash
           <div class="tc mtl">
             <a class="btn btn--blue pam br4 smallest" href="https://angel.co/oneroom/jobs/">Apply now</a>
           </div>
-          </article>
-        </div>
-        <div class="center mw8 phl phn-ns cf bt b--light-gray ptm mtx">
-          <h1 class="fl wi-100 b tc ttu f1-ns mbs mtx pvl">The Team</h1>
-          <article class="fl tc wi-50 wi-25-ns blue mbl">
-            <div class="phl">
-              <img src="img/jeff.png" class="box br-circ ba bw3 bw4-ns b--near-white db" >
-            </div>
-            <h1 class="mbn f3">Jeff Kolesky</h1>
-            <p class="mvn dark-blue fw1">Co-founder</p>
-          </article>
-          <article class="fl tc wi-50 wi-25-ns blue mbl">
-            <div class="phl">
-              <img src="img/scott.png" class="box br-circ ba bw3 bw4-ns b--near-white db">
-            </div>
-            <h1 class="mbn f3">Scott Forman</h1>
-            <p class="mvn dark-blue fw1">Co-founder</p>
-          </article>
-          <article class="fl tc wi-50 wi-25-ns blue mbl">
-            <div class="phl">
-              <img src="img/kristina.jpg" class="box br-circ ba bw3 bw4-ns b--near-white db">
-            </div>
-            <h1 class="mbn f3">Kristina Garfinkel</h1>
-            <p class="mvn dark-blue fw1">Software Engineer</p>
-          </article>
-          <article class="fl tc wi-50 wi-25-ns mbs blue mbl">
-            <div class="phl">
-              <img src="img/samantha.jpg" class="box br-circ ba bw3 bw4-ns b--near-white db">
-            </div>
-            <h1 class="mbn f4 f3-ns">Samantha Warren</h1>
-            <p class="mvn dark-blue fw1">Design Lead</p>
-          </article>
-          <article class="fl tc wi-50 wi-25-ns mbs blue mbl">
-            <div class="phl">
-              <img src="img/joe.png" class="box br-circ ba bw3 bw4-ns b--near-white db">
-            </div>
-            <h1 class="mbn f4 f3-ns">Joe Greenstein</h1>
-            <p class="mvn dark-blue fw1">Advisor</p>
           </article>
         </div>
       </section>
