Continue simplifying the home page.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 layout: master
 title: home 
 ---
-
-  <body>
     <header>
-      <div class="bt bw3 b--green center mw9 phm phl-ns pbxl bg-cv" style="background-image:url(img/header.jpg);background-position: center top;">
+      <div class="bt bw3 b--green center mw-fill-l phm phl-ns pbxl bg-cv" style="background-image:url(img/header.jpg);background-position: center top;">
         <div class="tc">
           <div class="dib mw4 mw-12-ns mtl">
             <a href="/" class="fade" title="home"><img src="img/logo.svg"></a>
@@ -20,110 +18,24 @@ title: home
           </div>
         </div>
         <div class="tc center mtl">
-          <a href="/apply.html" class="center br3 ba b--white bw1 phm pvm small white dim">Sign up to teach</a>
+          <!- TODO: short description here -!>
+          <!- TODO: mailchimp email list signup form here -!>
         </div>
       </div>
     </header>
     <main class="pbx-ns">
-      <section id="valueprop">
-        <div class="center mw8 phm phl-ns">
-          <div class="cf bt b--lightest-gray ptx mtx">
-
-            <div class="fl">
-              <div class="pbl fl tc wi-100 wi-50-ns ">
-                <div class="mw5 center">
-                  <img src="img/mac-left.png" class="dn">
-                  <img src="img/imac.png">
-                </div>
-              </div>
-
-              <div class="fl wi-100 wi-50-ns">
-                <h1 class="wi-100 tc tl-ns fw1 mtm mtn-ns"><b>Reach students anywhere, any time.</h1>
-                  <p class="fw1 tc tl-ns serif">You can be anywhere, as long as you have a high-speed internet connection, a recent-model computer with a webcam, and a quiet place to be. Pants optional.</p>
-                </div>
-              </div>
-
-            <div class="fl">
-              <div class="pbl tc fl wi-100 wi-50-ns ">
-                <div class="mw5 center">
-                  <img src="img/mac-left.png" class="dn">
-                  <img src="img/imac.png">
-                </div>
-              </div>
-
-              <div class="fl wi-100 wi-50-ns">
-                <h1 class="wi-100 tc tl-ns fw1 mtm mtn-ns"><b>Foster real human connections.</h1>
-                  <p class="fw1 tc tl-ns serif">How well do you remember someone when you exchange comments on a message board?</p>
-                </div>
-              </div>
-
-            <div class="fl">
-              <div class="pbl tc fl wi-100 wi-50-ns ">
-                <div class="mw5 center">
-                  <img src="img/mac-left.png" class="dn">
-                  <img src="img/imac.png">
-                </div>
-              </div>
-
-              <div class="fl wi-100 wi-50-ns">
-                <h1 class="wi-100 tc tl-ns fw1 mtm mtn-ns"><b>We account for the nuances of teaching.</h1>
-                <p class="fw1 tc tl-ns serif">Specifically if you teach or help others write:</p>
-              </div>
-            </div>
-
-            <div class="fl">
-              <div class="pbl tc fl wi-100 wi-50-ns ">
-                <div class="mw5 center">
-                  <img src="img/mac-left.png" class="dn">
-                  <img src="img/imac.png">
-                </div>
-              </div>
-
-              <div class="fl wi-100 wi-50-ns">
-                <h1 class="wi-100 tc tl-ns fw1 mtm mtn-ns"><b>Reach students anywhere, any time.</h1>
-                  <p class="fw1 tc tl-ns serif">Specifically if you teach or help others write:</p>
-                </div>
-              </div>
-
-        </div>
+    <div class="cf ptx">
+      <div class="center mw7 phm phl-ns">
+        <p class="f2 fw1 lh-copy">
+        OneRoom's live video classroom takes the loneliness out of online learning. OneRoom empowers teachers to take the workshop and the seminar, not just the lecture, to the global community of learners.
+        </p>
       </div>
-        <!--<div class="br3 mtx bg-aqua-light pal">-->
-          <!--<p class="f4 f3-ns tc fw1 lh-copy mbn">We have <strike>10</strike> <b>3</b> slots still open for teachers in our private alpha.</p>-->
-          <!--<div class="tc pvl">-->
-            <!--<a class="btn btn--blue pam br4 f5" href="/apply.html">Sign up to teach</a>-->
-          <!--</div>-->
-        <!--</div>-->
-      </section> <!-- end value-prop section--!>
+    </div>
 
-      <section class="bt b--lightest-gray mtx pvx">
-        <div class="center mw7 phm phl-ns cf">
-          <header class="fl wi-100">
-            <h1 class="fl wi-100 f2 fw7 tc ttu mbx">We’re Hiring</h1>
-            <p class="lh-copy serif fw1 f3">
-              We're building a dramatically new kind of online classroom,  
-              focused on live discussion. 
-            </p>
-            <p class="lh-copy serif fw1 mbx">
-              As a founding team member at OneRoom, you'll make significant contributions
-              to our application. You'll be involved in every major decision, from which
-              frameworks to use, to the build process, to how we test. You'll work side-by-side with our
-              designer to translate an ambitious vision into reality, and help to shape that vision. 
-              If you want to work with a small team dedicated to product excellence and delighting
-              customers, we'd love to hear from you. 
-              This is the beginning of a fun ride. Come join us!
-            </p>
-          </header>
-        </div>
-        <div class="center mw6 cf">
-          <article class="fl tc wi-100">
-            <div class="mw4 mw-12-ns center">
-              <img src="img/question.png" class="box br-circ ba bw4 b--near-white">
-            </div>
-            <h1 class="mbn blue">You?</h1>
-          <div class="tc mtl">
-            <a class="btn btn--blue pam br4 smallest" href="https://angel.co/oneroom/jobs/">Apply now</a>
+        <div class="br3 mw8 center mtx bg-aqua-light pal">
+          <p class="f4 f3-ns tc fw1 lh-copy mbn">If you're an teacher who values discussion, we'd love to get to know you.</p>
+          <div class="tc pvl">
+            <a class="btn btn--blue pam br4 f5" href="/apply.html">Take our survey</a>
           </div>
-          </article>
         </div>
-      </section>
     </main>
