Add content for writing page. Add Google Tag Manager. Clean up sufficiently to push.

--- a/about.html
+++ b/about.html
@@ -5,16 +5,19 @@ title: about
 
 {% include smallheader.html %}
 
-<h1 class="fl wi-100 f2 fw7 tc ttu mbx">Our Story</h1>
+<h1 class="fl wi-100 f2 fw7 tc ttu mvl">Our Story</h1>
 
 <div class="center mw7 phm phl-ns cf">
   <p class="lh-copy serif fw1">
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  [Overview of what's in it for you. "On your own terms." etc.]</p>
+Scott Forman and Jeff Kolesky founded OneRoom in the summer of 2014. They were inspired by their own experiences with online courses to build a new way to learn online that didn't feel so lonely and isolating, and that emphasizes discussion and the social experience of learning. 
+  </p>
+  <p class="lh-copy serif fw1">
+  We're based in San Francisco, and are part of the <a href="http://www.helloinnerspace.org/">Innerspace</a> community of startups.
+  </p>
 </div>
 
         <div class="center mw8 phl phn-ns cf bt b--light-gray ptm mtx">
-          <h1 class="fl wi-100 b tc ttu f2 mbs mtx pvl">We Are</h1>
+          <h1 class="fl wi-100 b tc ttu f2 mbs mtx pvl">The Team</h1>
           <article class="fl tc wi-50 wi-25-ns blue mbl">
             <div class="phl">
               <img src="img/jeff.png" class="box br-circ ba bw3 bw4-ns b--near-white db" >
@@ -41,19 +44,19 @@ title: about
           </article>
           <article class="fl tc wi-50 wi-25-ns mbs blue mbl">
             <div class="phl">
-              <img src="img/simon.png" class="box br-circ ba bw3 bw4-ns b--near-white db">
+              <img src="img/simon.jpg" class="box br-circ ba bw3 bw4-ns b--near-white db">
             </div>
             <h1 class="mbn f4 f3-ns">Simon Murtha Smith</h1>
           </article>
           <article class="fl tc wi-50 wi-25-ns blue mbl">
             <div class="phl">
-              <img src="img/kayla.png" class="box br-circ ba bw3 bw4-ns b--near-white db" >
+              <img src="img/kayla.jpg" class="box br-circ ba bw3 bw4-ns b--near-white db" >
             </div>
             <h1 class="mbn f3">Kayla Quock</h1>
           </article>
           <article class="fl tc wi-50 wi-25-ns blue mbl">
             <div class="phl">
-              <img src="img/michael.png" class="box br-circ ba bw3 bw4-ns b--near-white db" >
+              <img src="img/michael.jpg" class="box br-circ ba bw3 bw4-ns b--near-white db" >
             </div>
             <h1 class="mbn f3">Michael Dunkle</h1>
           </article>
