--- a/index.html
+++ b/index.html
@@ -17,25 +17,49 @@ title: home
             <img src="img/mac-transparent-bg.png" class="dib">
           </div>
         </div>
-        <div class="tc center mtl">
-          <!- TODO: short description here -!>
-          <!- TODO: mailchimp email list signup form here -!>
+
+        <section class="tc center mtl">
+          <div class="phm phl-ns lh-copy f4 ptm pbl br3">
+            <form action="//joinoneroom.us8.list-manage.com/subscribe/post?u=76d6db963f53c6373ac58a7dd&amp;id=f0c4abc571" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <div class="mc-field-group">
+                <div class="mw6 mbl mtm dib wi-50-ns wi-100 mc-field-group">
+                  <input id="mce-EMAIL" type="email" class="wi-100 ba b--gray br2 pas required email" placeholder="example: hi@gmail.com" name="EMAIL"/>
+                </div>
+                <div id="mce-responses" class="clear">
+                  <div class="response" id="mce-error-response" style="display:none"></div>
+                  <div class="response" id="mce-success-response" style="display:none"></div>
+                </div>
+                <div class="mtm">
+                  <input type="submit" value="Notify me when OneRoom is ready" class="f5 btn btn--blue pam br3 ba bs-none" name="subscribe" id="mc-embedded-subscribe">
+                </div>
+
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;"><input type="text" name="b_76d6db963f53c6373ac58a7dd_f0c4abc571" tabindex="-1" value=""></div>
+              </form>
+            </div>
+          </section>
         </div>
-      </div>
+
     </header>
     <main class="pbx-ns">
     <div class="cf ptx">
       <div class="center mw7 phm phl-ns">
-        <p class="f2 fw1 lh-copy">
+        <p class="serif f2 fw1 lh-copy">
         OneRoom's live video classroom takes the loneliness out of online learning. OneRoom empowers teachers to take the workshop and the seminar, not just the lecture, to the global community of learners.
         </p>
       </div>
     </div>
 
         <div class="br3 mw8 center mtx bg-aqua-light pal">
-          <p class="f4 f3-ns tc fw1 lh-copy mbn">If you're an teacher who values discussion, we'd love to get to know you.</p>
+          <p class="f4 f3-ns tc fw1 lh-copy mbn">If you're a teacher and you value discussion, we'd love to get to know you.</p>
           <div class="tc pvl">
-            <a class="btn btn--blue pam br4 f5" href="/apply.html">Take our survey</a>
+            <a class="btn btn--blue pam br4 f5" href="http://bit.ly/oneroom-teacher-survey">Take short teacher survey</a>
           </div>
         </div>
     </main>
+
+    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+    <script type='text/javascript'>
+      (function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));
+      var $mcj = jQuery.noConflict(true);
+    </script>
