--- a/writing.html
+++ b/writing.html
@@ -5,95 +5,109 @@ title: writing
 
 {% include smallheader.html %}
 
-<h1 class="fl wi-100 f2 fw7 tc ttu mbx">OneRoom For Writing Workshops</h1>
+<h1 class="fl wi-100 f2 fw7 tc ttu mvl">Teach Writing with OneRoom</h1>
 
-<p class="lh-copy serif fw1 f3 tc">[Overview of what's in it for you. "On your own terms." etc.]</p>
-
-<div class="center mw8 phl phn-ns cf bt b--light-gray ptm mtx">
-  <article class="fl tc wi-50 wi-25-ns">
-    <div class="mw4 mw-12-ns center">
-      <img src="img/plan.png" class="box ba bw4 b--near-white">
-    </div>
-    <h1 class="mbn blue">Plan</h1>
-    <p class="lh-copy serif fw1 mbx">
-      Description of what it means to plan a class.
-    </p>
-  </article>
-
-  <article class="fl tc wi-50 wi-25-ns">
-    <div class="mw4 mw-12-ns center">
-      <img src="img/plan.png" class="box ba bw4 b--near-white">
-    </div>
-    <h1 class="mbn blue">Promote</h1>
-    <p class="lh-copy serif fw1 mbx">
-      Description of what it means to plan a class.
-    </p>
-  </article>
-
-  <article class="fl tc wi-50 wi-25-ns">
-    <div class="mw4 mw-12-ns center">
-      <img src="img/plan.png" class="box ba bw4 b--near-white">
-    </div>
-    <h1 class="mbn blue">Run</h1>
-    <p class="lh-copy serif fw1 mbx">
-      Description of what it means to plan a class.
-    </p>
-  </article>
-
-  <article class="fl tc wi-50 wi-25-ns">
-    <div class="mw4 mw-12-ns center">
-      <img src="img/plan.png" class="box ba bw4 b--near-white">
-    </div>
-    <h1 class="mbn blue">Repeat</h1>
-    <p class="lh-copy serif fw1 mbx">
-      Description of what it means to plan a class.
-    </p>
-  </article>
+<div class="lh-copy serif wi-100 wi-50-ns center">
+  <p class="fw1 f3">OneRoom makes it easy to teach online writing classes that feel like live workshops. You can:</p>
+    <ul>
+      <li>Plan and schedule classes</li>
+      <li>Connect with students from anywhere in the world</li>
+      <li>Set your own prices</li>
+      <li>Register students</li>
+      <li>Accept payment</li>
+      <li>Assign reading</li>
+      <li>Select students to be workshopped</li>
+      <li>Manage written feedback</li>
+    </ul>
+  <p class="fw1 f3">In a clean, friendly interface that allows you to focus on teaching and mentorship.</p>
 </div>
 
-<h1 class="fl wi-100 f2 fw7 tc ttu mbx">The classroom</h1>
+<div class="br3 center mtx bg-aqua-light pal">
+  <p class="f4 f3-ns tc fw1 lh-copy mbn">Interested? We'd love to get to know you.</p>
+  <div class="tc pvl">
+    <a class="btn btn--blue pam br4 f5" href="http://bit.ly/oneroom-teacher-survey">Take short teacher survey</a>
+  </div>
+</div>
 
-<p class="lh-copy serif fw1 f3 tc">[Overview of classroom design principles and ideas.</p>
+<h1 class="fl wi-100 f2 fw7 tc ttu mvl">The Teaching Experience</h1>
+
+<p class="lh-copy serif fw1 f3 tc center wi100 wi-50-ns">OneRoom's handles all the nuances of the workshop format. Assign readings, invite students to comment on them, select students to be workshopped, manage other students' written responses. And in live meetings, mingle before the session starts and after it ends, and manage the stage just like you would in person, directing attention and  steering the conversation. In an easy-to-use, friendly-feeling browser-based classroom.</p>
 
 <div class="center mw8 phl phn-ns cf bt b--light-gray ptm mtx">
-  <article class="fl tc wi-50 wi-25-ns">
-    <div class="mw4 mw-12-ns center">
-      <img src="img/plan.png" class="box ba bw4 b--near-white">
-    </div>
-    <h1 class="mbn blue">Content</h1>
-    <p class="lh-copy serif fw1 mbx">
-      Description of what it means to plan a class.
-    </p>
+
+  <article class="fl center">
+      <div class="wi-25-ns fl mrl">
+        <h1 class="mbn blue">Workshop</h1>
+        <p class="serif mrm">Bring readings or a student's work into focus for discussion.</p>
+      </div>
+      <img src="img/workshop.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
   </article>
 
-  <article class="fl tc wi-50 wi-25-ns">
-    <div class="mw4 mw-12-ns center">
-      <img src="img/plan.png" class="box ba bw4 b--near-white">
+  <article class="fl">
+    <div class="wi-25-ns fl mrl">
+      <h1 class="mbn blue">Share</h1>
+      <p class="serif mrm">Share readings easily, and allow students to share their work securely.</p>
     </div>
-    <h1 class="mbn blue">Comments</h1>
-    <p class="lh-copy serif fw1 mbx">
-      Description of what it means to plan a class.
-    </p>
+    <img src="img/share.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
   </article>
 
-  <article class="fl tc wi-50 wi-25-ns">
-    <div class="mw4 mw-12-ns center">
-      <img src="img/plan.png" class="box ba bw4 b--near-white">
+  <article class="fl">
+    <div class="wi-25-ns fl mrl">
+      <h1 class="mbn blue">Comment</h1>
+      <p class="serif mrm">Students can comment on one another's work, privately or publicly.</p>
     </div>
-    <h1 class="mbn blue">Workshop</h1>
-    <p class="lh-copy serif fw1 mbx">
-      Description of what it means to plan a class.
-    </p>
+    <img src="img/comment.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
   </article>
 
-  <article class="fl tc wi-50 wi-25-ns">
-    <div class="mw4 mw-12-ns center">
-      <img src="img/plan.png" class="box ba bw4 b--near-white">
+  <article class="fl">
+    <div class="wi-25-ns fl mrl">
+      <h1 class="mbn blue">Discuss</h1>
+      <p class="serif mrm">Facilitate live discussions with everyone on an equal footing.</p>
     </div>
-    <h1 class="mbn blue">Private</h1>
-    <p class="lh-copy serif fw1 mbx">
-      Description of what it means to plan a class.
-    </p>
+    <img src="img/bradybunch.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
+  </article>
+
+  <article class="fl">
+    <div class="wi-25-ns fl mrl">
+      <h1 class="mbn blue">Mingle</h1>
+      <p class="serif mrm">Have multiple parallel conversations in informal "mingling" mode.</p>
+    </div>
+    <img src="img/mingle.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
+  </article>
+
+  <article class="fl">
+    <div class="wi-25-ns fl mrl">
+      <h1 class="mbn blue">Breakout</h1>
+      <p class="serif mrm">Break into smaller groups for planned or impromptu exercises.</p>
+    </div>
+    <img src="img/breakout.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
   </article>
 
 </div>
+
+<section class="bg-lightest-gray tc center mtl">
+  <div class="phm phl-ns lh-copy f4 ptm pbl br3">
+    <form action="//joinoneroom.us8.list-manage.com/subscribe/post?u=76d6db963f53c6373ac58a7dd&amp;id=f0c4abc571" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+      <div class="mc-field-group">
+        <div class="mw6 mbl mtm dib wi-50-ns wi-100 mc-field-group">
+          <input id="mce-EMAIL" type="email" class="wi-100 ba b--gray br2 pas required email" placeholder="example: hi@gmail.com" name="EMAIL"/>
+        </div>
+        <div id="mce-responses" class="clear">
+          <div class="response" id="mce-error-response" style="display:none"></div>
+          <div class="response" id="mce-success-response" style="display:none"></div>
+        </div>
+        <div class="mtm">
+          <input type="submit" value="Notify me when OneRoom is ready" class="f5 btn btn--blue pam br3 ba bs-none" name="subscribe" id="mc-embedded-subscribe">
+        </div>
+
+        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+        <div style="position: absolute; left: -5000px;"><input type="text" name="b_76d6db963f53c6373ac58a7dd_f0c4abc571" tabindex="-1" value=""></div>
+      </form>
+    </div>
+  </section>
+
+    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+    <script type='text/javascript'>
+      (function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));
+      var $mcj = jQuery.noConflict(true);
+    </script>
