Fix typo on writing page.

--- a/writing.html
+++ b/writing.html
@@ -31,7 +31,7 @@ title: writing
 
 <h1 class="fl wi-100 f2 fw7 tc ttu mvl">The Teaching Experience</h1>
 
-<p class="lh-copy serif fw1 f3 tc center wi100 wi-50-ns">OneRoom's handles all the nuances of the workshop format. Assign readings, invite students to comment on them, select students to be workshopped, manage other students' written responses. And in live meetings, mingle before the session starts and after it ends, and manage the stage just like you would in person, directing attention and  steering the conversation. In an easy-to-use, friendly-feeling browser-based classroom.</p>
+<p class="lh-copy serif fw1 f3 tc center wi100 wi-50-ns">OneRoom handles all the nuances of the workshop format. Assign readings, invite students to comment on them, select students to be workshopped, manage other students' written responses. And in live meetings, mingle before the session starts and after it ends, and manage the stage just like you would in person, directing attention and  steering the conversation. In an easy-to-use, friendly-feeling browser-based classroom.</p>
 
 <div class="center mw8 phl phn-ns cf bt b--light-gray ptm mtx">
 
