--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@ title: home
 
         <section class="tc center mtl">
           <div class="phm phl-ns lh-copy f4 ptm pbl br3">
-            <form action="//joinoneroom.us8.list-manage.com/subscribe/post?u=76d6db963f53c6373ac58a7dd&amp;id=f0c4abc571" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <form action="//joinoneroom.us8.list-manage.com/subscribe/post?u=76d6db963f53c6373ac58a7dd&amp;id=04aed0f3b7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
               <div class="mc-field-group">
                 <div class="mw6 mbl mtm dib wi-50-ns wi-100 mc-field-group">
                   <input id="mce-EMAIL" type="email" class="wi-100 ba b--gray br2 pas required email" placeholder="example: hi@gmail.com" name="EMAIL"/>
                 </div>
                 <div id="mce-responses" class="clear">
-                  <div class="response" id="mce-error-response" style="display:none"></div>
-                  <div class="response" id="mce-success-response" style="display:none"></div>
+                  <div class="response" id="mce-error-response" style="display:none;color:#fff"></div>
+                  <div class="response" id="mce-success-response" style="display:none;color:#fff"></div>
                 </div>
                 <div class="mtm">
                   <input type="submit" value="Find out more" class="f5 btn btn--blue pam br3 ba bs-none" name="subscribe" id="mc-embedded-subscribe">
                 </div>
 
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                <div style="position: absolute; left: -5000px;"><input type="text" name="b_76d6db963f53c6373ac58a7dd_f0c4abc571" tabindex="-1" value=""></div>
+                <div style="position: absolute; left: -5000px;"><input type="text" name="b_76d6db963f53c6373ac58a7dd_04aed0f3b7" tabindex="-1" value=""></div>
               </form>
             </div>
           </section>
