Update home page product images.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ title: home
         <hr style="height:0;padding-bottom:1px;background:rgba(0,0,0,.1);border:0;" class="mw7 mvl">
 
         <div class="cf">
-          <div class="mw5 mw6-ns tc center ">
-            <img src="img/mac-transparent-bg.png" class="dib">
+          <div class="mw5 mw7-ns tc center ">
+            <img src="img/modes.png" class="dib">
           </div>
         </div>
 
