--- a/blog.html
+++ b/blog.html
@@ -3,11 +3,16 @@ layout: master
 title: blog 
 ---
 
-  {% include smallheader.html %}
-  <ul>
+{% include smallheader.html %}
+
+<div class="tl-ns fw1 f3 mw6 center f4 mid-gray pam">
   {% for post in site.posts %}
-    <li>
-    <a href="{{ post.url }}">{{ post.title }}</a>
-    </li>
+  <h1><a class="link" href="{{ post.url }}">{{ post.title }}</a></h1>
+  <div class="lh">
+    <p>{{ post.author }} &middot; {{ post.date | date: "%B %-d, %Y" }}</p>
+  </div>
+  <div class="lh-copy pts">
+    {{ post.excerpt }}
+  </div>
   {% endfor %}
-</ul>
+</div>
