Move the post from _drafts to _post

--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@ title: blog
 
 {% include smallheader.html %}
 
-<div class="tl-ns fw1 f3 mw6 center f4 mid-gray pam">
+<div class="b--light-gray bw4 tl-ns fw1 f3 mw7 center f4 mid-gray pal">
   {% for post in site.posts %}
   <h1><a class="link" href="{{ post.url }}">{{ post.title }}</a></h1>
   <div class="lh">
